--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <div id="results"></div>
     <div id="totalResult">
         <h3>Total Mängd:</h3>
-        <p id="totalAmount">0 grams</p>
+        <p id="totalAmount">0 gram</p>
     </div>
 
     <script src="script.js"></script>
